Add integration test for search ext builder
Signed-off-by: Medha Srinivasarao Srivatsa <medha.srivatsa@gmail.com>